src/test/deca/syntax/invalid/minus_minus_minus_any.deca
// Description :
//
//      Test de programme syntaxiquement incorrect(deux '+' qui se suivent).
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//    Créé le 06/06/2023 par gl03

{
    int y=3++2;
    print(y);
}